test/zinc_source/compile_errors/functions/12_spread_named_builtin.zn
// expected-error: print\(\) does not accept named arguments

struct Args {
    value: i64
}

fn main() {
    args = Args { value: 1 }
    print(..args)
}
